# t2-django

./: README.md  notes  package-lock.json  package.json  pyproject.toml
django_vite_example/: settings.py  urls.py
sample/: urls.py  views.py
sample/templates/sample/: base.html  some.html
static/src/css/: style.css
static/src/js/: main.js
templates/: body.html  index.html
