[tool.poetry]
name = "django-vite-myexample"
version = "0.0.1"
description = "A example Django project with Django Vite"
authors = ["MrBin99", "Me"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.4"
django-vite = "^1.1.0"
django-cors-headers = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
